docs/tests/parser/declarations/valid/VarDeclArrayWithInit.src
fn void test() {
    let int a[3] = {1, 2, 3};
    let float b[2] = {1.0, 2.0};
}
