docs/tests/parser/declarations/invalid/VarDeclArrayInitTrailingComma.src
fn void test() {
    let int a[3] = {1, 2, 3,};
}
